first, seemingly working docker image and helm chart for electrs.

--- a/k8s/templates/deployment.yaml
+++ b/k8s/templates/deployment.yaml
@@ -33,7 +33,7 @@ spec:
           args: ["/home/electrs/init.sh"]
           envFrom:
             - secretRef:
-                name: electrs-rpc-creds
+                name: bitcoind-rpc-creds
           {{- with .Values.initEnv }}
           env: {{- toYaml . | nindent 12 }}
           {{- end }}
