--- a/resources/electrs.conf.template
+++ b/resources/electrs.conf.template
@@ -7,8 +7,11 @@ daemon_rpc_addr = "bitcoind.bitcoin.svc.cluster.local:8332"
 daemon_p2p_addr = "bitcoind.bitcoin.svc.cluster.local:8333"
 auth="<RPC USERNAME>:<PASSWORD>"
 
+jsonrpc_timeout = 300
+monitoring_addr = 0.0.0.0:4224
+
 # Electrs settings
-electrum_rpc_addr = "127.0.0.1:50001"
+electrum_rpc_addr = "0.0.0.0:50001"
 db_dir = "/data/electrs/db"
 index_lookup_limit = 1000
 
